--- a/app/views/islands/index.html.erb
+++ b/app/views/islands/index.html.erb
@@ -39,7 +39,7 @@
                 <th style="width: 70%">
                     <%= sort_link(@q, :island_name, "Island", default_order: :asc)%>
                 </th>
-                <th style="width: auto;">Number of Clients</th>
+                <th style="width: auto;">Number of Regions</th>
                 <!-- <th style="width: auto;">Edit</th>
         <th style="width: auto;">Delete</th> -->
             </tr>
