--- a/app/views/deep_wells/_form.html.erb
+++ b/app/views/deep_wells/_form.html.erb
@@ -72,7 +72,7 @@
         </div>
         <div class="field">
             <strong>
-                <%= form.label "Water Limit:" %></strong>
+                <%= form.label "Extraction Granted:" %></strong>
 
             <div class="row">
                 <div class="col" style="width: 90%;">
